# openAFE

./: .gitignore  Makefile.am  Makefile.am~  README.md  README.md~  configure  configure.ac
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
examples/: DEMO_preProc.cpp  Makefile.am  Makefile.in  README.md~  TEST_crossCorrelation.cpp  TEST_filterbank.cpp  TEST_ihc.cpp  TEST_ild.cpp  TEST_input.cpp  TEST_itd.cpp  TEST_preProc.cpp  TEST_ratemap.cpp  matFiles.cpp  matFiles.hpp
matFiles/: Makefile.am  matFiles.cpp  matFiles.hpp  test.cpp
results/filterbank/gammatone/: gammatone.m
results/ihc/: ihc.m
results/ild/: ild.m  ild_out.mat  ild_out_.mat
results/input/: input_out.m  input_out.mat
results/itd/: itd_out.mat
results/preProc/nothing/: nothing.m  preProc_out.mat
results/preProc/pp_bLevelScaling/: pp_bLevelScaling(10).mat  pp_bLevelScaling(100).m  pp_bLevelScaling.mat
results/preProc/pp_bNormalizeRMS/: pp_bNormalizeRMS.m  pp_bNormalizeRMS.mat
results/preProc/pp_bPreEmphasis/: pp_bPreEmphasis.m  pp_bPreEmphasis.mat
results/preProc/pp_bRemoveDC/: out.mat  pp_bRemoveDC(1000).mat  pp_bRemoveDC(20).mat  pp_bRemoveDC.m
results/ratemap/: ratemap.m  ratemap_out.mat
results/xcorr/: crossCorrelation.m  xcorr.m  xcorr_out.mat
src/: Makefile.am  Makefile.in
src/Filters/: CascadeFilters.hpp  GenericFilter.hpp  Makefile.am  Makefile.in  bwCoef.cpp  bwFilter.cpp  bwFilter.hpp  bwIIR.cpp
src/Processors/: LAGProcessor.hpp  Makefile.am  Makefile.in  Processor.cpp  Processor.hpp  TDSProcessor.hpp  TFSProcessor.hpp  crossCorrelation.cpp  crossCorrelation.hpp  gammatoneProc.cpp  gammatoneProc.hpp  ihcProc.cpp  ihcProc.hpp  ildProc.cpp  ildProc.hpp  inputProc.cpp  inputProc.hpp  itdProc.cpp  itdProc.hpp  preProc.cpp  preProc.hpp  ratemap.cpp  ratemap.hpp  windowBasedLAGProcs.cpp  windowBasedLAGProcs.hpp  windowBasedProcs.cpp
src/Signals/: CorrelationSignal.hpp  Makefile.am  Makefile.in  Signal.hpp  TimeDomainSignal.hpp  TimeFrequencySignal.hpp  circularContainer.hpp  dataType.hpp
src/tools/: Makefile.am  Makefile.in  fftEngine.cpp  fftEngine.hpp  mathTools.hpp
test/: filter.cpp  run  test.cpp  win.cpp
