noinst_LIBRARIES = libprocessors.a

libprocessors_a_SOURCES = Processor.hpp
libprocessors_a_SOURCES += Processor.cpp
libprocessors_a_SOURCES += TDSProcessor.hpp
libprocessors_a_SOURCES += TFSProcessor.hpp
libprocessors_a_SOURCES += ProcessorVector.hpp
libprocessors_a_SOURCES += inputProc.hpp
libprocessors_a_SOURCES += inputProc.cpp
libprocessors_a_SOURCES += preProc.hpp
libprocessors_a_SOURCES += preProc.cpp
